--- a/views/shared/nav.pug
+++ b/views/shared/nav.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Template
+      a.navbar-brand(href='/') HANGMAN!
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
       ul.nav.navbar-nav.navbar-right
@@ -19,3 +19,6 @@ nav.navbar.navbar-default
         li: a(href='/faq')
           i.fa.fa-question-circle-o.fa-fw
           span Faq
+          li: a(href='/game')
+            i.fa.fa-usd.fa-fw
+            span Game
